CRUD de movimientos

--- a/CuentaMovimientosMicroservicio/CuentaMovimientosMicroservicio.Api/appsettings.json
+++ b/CuentaMovimientosMicroservicio/CuentaMovimientosMicroservicio.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db": "Server=jose-fernandez;Database=newblock;User Id=sa;Password=sa;TrustServerCertificate=True"
+    "DefaultConnection": "Server=XXXXXXXX;Database=XXXXX;User Id=sa;Password=XXXXX;Trusted_Connection=True;Integrated Security=false;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
   "esUrl" : "https://elastic:aTzWHWfF_YiEo*5YVvzB@localhost:9200"
 }
